Solved after mentor's review